@@ -8,7 +8,7 @@ PACKAGE_CFNAME = gnu-kawa-slib
 ENABLE_GCJ_COMPILED = $(OFILES_DIR)/kawa1$(exeext) \
   $(OFILES_DIR)/$(PACKAGE_CFNAME).o
 
-java_SCM = genwrite.scm pp.scm ppfile.scm printf.scm \
+java_SCM = genwrite.scm pp.scm ppfile.scm printf.scm readtable.scm \
   $(SCMSOURCES_@XML_SELECTED@)
 SOURCES = $(java_SCM)
 SCMSOURCES_XML_ENABLED = XML.scm
